<resources>
    <string name="app_name">Pico Botella</string>
    <string name="rate_app">Calificar</string>
    <string name="audio">Audio</string>
    <string name="instructions">Instrucciones</string>
    <string name="challenges">Retos</string>
    <string name="share">Compartir</string>
    <string name="bottle">Botella</string>
    <string name="press_me">Presióname</string>
    <string name="splash_title">Pico Botella</string>
    <string name="share_app_message">App Pico Botella\nSolo los valientes lo juegan !!\nhttps://play.google.com/store/apps/details?id=com.nequi.MobileApp&amp;hl=es_419&amp;gl=es</string>
    <string name="share_app_title">Compartir aplicación</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=com.nequi.MobileApp&amp;hl=es_419&amp;gl=es</string>
    <string name="how_to_play_title">¿Cómo se juega?</string>
    <string name="how_to_win_title">¿Quién gana?</string>
    <string name="how_to_play_text">
        Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella.\nEl jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego.
    </string>
    <string name="who_wins_text">
        Gana el último jugador que no abandone el juego.
    </string>
    <string name="back_button">Regresar</string>
    <string name="instructions_title">Reglas del Juego</string>
    <string name="challenges_title">Retos</string>
    <string name="challenge_title">Reto</string>
    <string name="delete_title">Eliminar Reto</string>
    <string name="edit_title">Editar</string>
    <string name="winner_title">Ganador</string>
    <string name="add_one_challenge">Agregar un reto</string>
    <string name="custom_dialogue_button">Cerrar</string>
    <string name="add_challenge">Agregar reto</string>
    <string name="edit_challenge">Editar reto</string>
    <string name="challenge_hint">Escriba el reto</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="delete_challenge_question">¿Desea eliminar el siguiente reto?:</string>
    <string name="no">NO</string>
    <string name="yes">SI</string>
</resources>
