<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4F4C4C">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/btnInstructionsBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/back_btn"
                android:contentDescription="@string/back_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_title"
                android:textColor="#EB2D2D"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_text"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:paddingTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_win_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_wins_text"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:paddingTop="8dp"/>

            <ImageView
                android:id="@+id/winner_icon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/winner_title"
                android:src="@drawable/winner_pico_botella"
                android:paddingTop="30dp"/>

        </LinearLayout>

    </ScrollView>

</layout>